[package]
name = "hello-opencl3"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
opencl3 = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
cfg-if = "1.0"
